--- a/common/src/main/resources/reference.conf
+++ b/common/src/main/resources/reference.conf
@@ -19,6 +19,9 @@ akka {
           journal-index = "akka_persistence_journal_index"
           journal-seq-nr-index = "max_sequence_sort"
           journal-tag-index = "journal_tag_index"
+          journal-pid-index = "journal_pid_index"
+          journal-timestamp-index = "journal_timestamp_index"
+
           # Write concerns are one of: Unacknowledged, Acknowledged, Journaled, ReplicaAcknowledged
           journal-write-concern = "Journaled"
           journal-wtimeout = 3s
